--- a/README.adoc
+++ b/README.adoc
@@ -12,8 +12,8 @@ You'll create an application that provides the time of day and then build it wit
 
 == What you'll need
 
- - About 15 minutes
- - A favorite text editor or IDE
+ - About 15 minutes only
+ - A favorite text editor or IDE (Integrated development environment)
  - {jdk}[JDK 8] or later
 
 include::https://raw.githubusercontent.com/spring-guides/getting-started-macros/master/how_to_complete_this_guide.adoc[]
